# job-offer-parser

./: .coveragerc  .flake8  .gitignore  README.md  Taskfile.yml  jjit.py  pyproject.toml  requirements.txt
job_offer_parser/: __init__.py  __main__.py  cli.py  justjoinit.py  module_exceptions.py  nofluffjobs.py  settings.py  utils.py
job_offer_parser/parsers/: base_parser.py  bulldogjob.py  inhire.py  justjoinit.py  justjoinit_v2.py  nofluffjobs.py  pracujpl.py  solidjobs.py  theprotocol.py
